--- a/Homework_Search/pom.xml
+++ b/Homework_Search/pom.xml
@@ -3,16 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>inf304</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>inf304</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>lab01</module>
-        <module>Homework_Search</module>
-        <module>Neuro</module>
-    </modules>
+    <artifactId>Homework_Search</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
